<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question: 45/89</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="next_button">NEXT</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect">Incorrect</string>
    <string name="text_formatted">Question: %d/%d</string>
</resources>